# tpls

./: .gitignore  CMakeLists.txt
CMake/compile_tests/: cuda_compute_capability.cc  cuda_compute_capability.cu  musa_compute_capability.cc  vulkan_version_check.cc
argparse/: README.md
bitsery/: CMakeLists.txt  tests.7z
llhttp/: CMakeLists.txt  libllhttp.pc
loguru/: CMakeLists.txt  loguru.cpp
mshio/: CMakeLists.txt
partio/: CMakeLists.txt
plog/: Logger.h
plog/Appenders/: RollingFileAppender.h
umpire/: CMakeLists.txt
umpire/blt/: SetupBLT.cmake
umpire/src/: CMakeLists.txt
umpire/src/zensim/tpls/umpire/: Allocator.cpp  Allocator.hpp  Allocator.inl  CMakeLists.txt  DeviceAllocator.cpp  DeviceAllocator.hpp  Replay.cpp  Replay.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl  TypedAllocator.hpp  TypedAllocator.inl  Umpire.cpp  Umpire.hpp
umpire/src/zensim/tpls/umpire/alloc/: CMakeLists.txt  CudaMallocAllocator.hpp  CudaMallocManagedAllocator.hpp  CudaPinnedAllocator.hpp  HipMallocAllocator.hpp  HipMallocManagedAllocator.hpp  HipPinnedAllocator.hpp  MallocAllocator.hpp  OpenMPTargetAllocator.hpp  PosixMemalignAllocator.hpp  SyclMallocAllocator.hpp  SyclMallocManagedAllocator.hpp  SyclPinnedAllocator.hpp
umpire/src/zensim/tpls/umpire/interface/: umpire.h
umpire/src/zensim/tpls/umpire/interface/c_fortran/: wrapAllocator.cpp  wrapResourceManager.cpp  wrapUmpire.cpp
umpire/src/zensim/tpls/umpire/op/: CMakeLists.txt  CudaAdviseAccessedByOperation.cpp  CudaAdviseAccessedByOperation.hpp  CudaAdvisePreferredLocationOperation.cpp  CudaAdvisePreferredLocationOperation.hpp  CudaAdviseReadMostlyOperation.cpp  CudaAdviseReadMostlyOperation.hpp  CudaAdviseUnsetAccessedByOperation.cpp  CudaAdviseUnsetAccessedByOperation.hpp  CudaAdviseUnsetPreferredLocationOperation.cpp  CudaAdviseUnsetPreferredLocationOperation.hpp  CudaAdviseUnsetReadMostlyOperation.cpp  CudaAdviseUnsetReadMostlyOperation.hpp  CudaCopyFromOperation.cpp  CudaCopyFromOperation.hpp  CudaCopyOperation.cpp  CudaCopyOperation.hpp  CudaCopyToOperation.cpp  CudaCopyToOperation.hpp  CudaGetAttributeOperation.cpp  CudaGetAttributeOperation.hpp  CudaMemPrefetchOperation.cpp  CudaMemPrefetchOperation.hpp  CudaMemsetOperation.cpp  CudaMemsetOperation.hpp  GenericReallocateOperation.cpp  GenericReallocateOperation.hpp  HipCopyFromOperation.cpp  HipCopyFromOperation.hpp  HipCopyOperation.cpp  HipCopyOperation.hpp  HipCopyToOperation.cpp  HipCopyToOperation.hpp  HipMemsetOperation.cpp  HipMemsetOperation.hpp  HostCopyOperation.cpp  HostCopyOperation.hpp  HostMemsetOperation.cpp  HostMemsetOperation.hpp  HostReallocateOperation.cpp  (+21 more)
umpire/src/zensim/tpls/umpire/resource/: CMakeLists.txt  CudaConstantMemoryResource.cu  CudaConstantMemoryResource.hpp  CudaConstantMemoryResourceFactory.cpp  CudaConstantMemoryResourceFactory.hpp  CudaDeviceMemoryResource.cpp  CudaDeviceMemoryResource.hpp  CudaDeviceResourceFactory.cpp  CudaDeviceResourceFactory.hpp  CudaPinnedMemoryResourceFactory.cpp  CudaPinnedMemoryResourceFactory.hpp  CudaUnifiedMemoryResourceFactory.cpp  CudaUnifiedMemoryResourceFactory.hpp  DefaultMemoryResource.hpp  DefaultMemoryResource.inl  FileMemoryResource.cpp  FileMemoryResource.hpp  FileMemoryResourceFactory.cpp  FileMemoryResourceFactory.hpp  HipConstantMemoryResource.cpp  HipConstantMemoryResource.hpp  HipConstantMemoryResourceFactory.cpp  HipConstantMemoryResourceFactory.hpp  HipDeviceMemoryResource.cpp  HipDeviceMemoryResource.hpp  HipDeviceResourceFactory.cpp  HipDeviceResourceFactory.hpp  HipPinnedMemoryResourceFactory.cpp  HipPinnedMemoryResourceFactory.hpp  HipUnifiedMemoryResourceFactory.cpp  HipUnifiedMemoryResourceFactory.hpp  HostResourceFactory.cpp  HostResourceFactory.hpp  MemoryResource.cpp  MemoryResource.hpp  MemoryResourceFactory.hpp  MemoryResourceRegistry.cpp  MemoryResourceRegistry.hpp  MemoryResourceTypes.hpp  NoOpMemoryResource.cpp  (+17 more)
umpire/src/zensim/tpls/umpire/strategy/: AlignedAllocator.cpp  AlignedAllocator.hpp  AllocationAdvisor.cpp  AllocationAdvisor.hpp  AllocationPrefetcher.cpp  AllocationPrefetcher.hpp  AllocationStrategy.cpp  AllocationStrategy.hpp  AllocationTracker.cpp  AllocationTracker.hpp  CMakeLists.txt  DynamicPool.hpp  DynamicPoolList.cpp  DynamicPoolList.hpp  DynamicPoolMap.cpp  DynamicPoolMap.hpp  DynamicSizePool.hpp  FixedPool.cpp  FixedPool.hpp  MixedPool.cpp  MixedPool.hpp  MonotonicAllocationStrategy.cpp  MonotonicAllocationStrategy.hpp  NamedAllocationStrategy.cpp  NamedAllocationStrategy.hpp  NumaPolicy.cpp  NumaPolicy.hpp  QuickPool.cpp  QuickPool.hpp  SizeLimiter.cpp  SizeLimiter.hpp  SlotPool.cpp  SlotPool.hpp  ThreadSafeAllocator.cpp  ThreadSafeAllocator.hpp  ZeroByteHandler.cpp  ZeroByteHandler.hpp
umpire/src/zensim/tpls/umpire/strategy/mixins/: AlignedAllocation.cpp  AlignedAllocation.hpp  AlignedAllocation.inl  Inspector.cpp  Inspector.hpp
umpire/src/zensim/tpls/umpire/tpl/: CMakeLists.txt
umpire/src/zensim/tpls/umpire/tpl/camp/: CMakeLists.txt
umpire/src/zensim/tpls/umpire/tpl/camp/test/: CMakeLists.txt
umpire/src/zensim/tpls/umpire/tpl/judy/: CMakeLists.txt
umpire/src/zensim/tpls/umpire/util/: AllocationMap.cpp  AllocationMap.hpp  AllocationRecord.hpp  CMakeLists.txt  Exception.cpp  FixedMallocPool.cpp  Logger.cpp  MPI.cpp  MPI.hpp  Macros.hpp  MemoryMap.hpp  MemoryMap.inl  MemoryResourceTraits.hpp  OutputBuffer.cpp  allocation_statistics.cpp  allocation_statistics.hpp  backtrace.hpp  backtrace.inl  detect_vendor.cpp  detect_vendor.hpp  io.cpp  memory_sanitizers.hpp  numa.cpp  wrap_allocator.hpp
whereami/: CMakeLists.txt
